--- a/src/main/resources/org/example/krypto/hello-view.fxml
+++ b/src/main/resources/org/example/krypto/hello-view.fxml
@@ -33,6 +33,8 @@
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
      </columnConstraints>
      <rowConstraints>
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -43,8 +45,10 @@
           <Label text="Wpisz klucz Heksadecymalnie" />
           <TextField fx:id="keyTextField" prefHeight="26.0" prefWidth="295.0" promptText="Wpisz 16 znaków HEX" GridPane.rowIndex="1" />
       
-          <Button onAction="#onGenerateKeyClick" text="Generuj losowy klucz" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         <Label text="Wygeneruj klucz" GridPane.columnIndex="1" />
+          <Button onAction="#onGenerateKeyClick" text="Generuj losowy klucz" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+         <Label text="Wygeneruj klucz" GridPane.columnIndex="3" />
+         <TextField fx:id="keyTextField2" prefHeight="26.0" prefWidth="295.0" promptText="Wpisz 16 znaków HEX" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <TextField fx:id="keyTextField3" prefHeight="26.0" prefWidth="295.0" promptText="Wpisz 16 znaków HEX" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       </children>
    </GridPane>
    <Separator prefWidth="200.0" />
@@ -122,16 +126,17 @@
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="179.0" text="Szyfruj -&gt;" GridPane.columnIndex="1" />
-         <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="185.0" text="&lt;- Deszyfruj" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <Button mnemonicParsing="false" onAction="#onEncryptClick" prefHeight="30.0" prefWidth="179.0" text="Szyfruj -&gt;" GridPane.columnIndex="1" />
+         <Button mnemonicParsing="false" onAction="#onDecryptClick" prefHeight="30.0" prefWidth="185.0" text="&lt;- Deszyfruj" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          <RadioButton mnemonicParsing="false" text="Z pliku" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <toggleGroup>
                <ToggleGroup fx:id="oknoplik" />
             </toggleGroup>
          </RadioButton>
          <RadioButton mnemonicParsing="false" text="Z okna" toggleGroup="$oknoplik" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-         <TextField prefHeight="26.0" prefWidth="109.0" />
-         <TextField GridPane.columnIndex="2" />
+         <TextField fx:id="inputTextField" prefHeight="26.0" prefWidth="109.0" promptText="Tekst jawny" />
+         <TextField fx:id="encryptedTextField" promptText="Szyfrogram" GridPane.columnIndex="2" />
       </children>
    </GridPane>
+   <Label text="Wpisz klucz Heksadecymalnie" />
 </VBox>
