--- a/src/main/resources/org/example/krypto/hello-view.fxml
+++ b/src/main/resources/org/example/krypto/hello-view.fxml
@@ -9,23 +9,26 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.TextArea?>
 <VBox alignment="CENTER" minHeight="514.0" minWidth="656.0" spacing="10.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.krypto.KryptoController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <GridPane>
      <columnConstraints>
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="375.0" minWidth="10.0" prefWidth="190.0" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="588.0" minWidth="10.0" prefWidth="570.0" />
      </columnConstraints>
      <rowConstraints>
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
          <Label text="Klucz" />
+         <TextField fx:id="informationBlock" GridPane.columnIndex="1" />
       </children>
    </GridPane>
    <Separator prefWidth="200.0" />
@@ -113,30 +116,23 @@
          <Separator prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
       </children>
    </GridPane>
-   <GridPane>
-     <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" maxWidth="311.4000244140625" minWidth="10.0" prefWidth="296.79998779296875" />
-       <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.20001220703125" minWidth="10.0" prefWidth="172.80001220703127" />
-       <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.20001220703125" minWidth="10.0" prefWidth="288.20001220703125" />
-     </columnConstraints>
-     <rowConstraints>
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-     </rowConstraints>
+   <HBox prefHeight="316.0" prefWidth="760.0">
       <children>
-         <Button mnemonicParsing="false" onAction="#onEncryptClick" prefHeight="30.0" prefWidth="179.0" text="Szyfruj -&gt;" GridPane.columnIndex="1" />
-         <Button mnemonicParsing="false" onAction="#onDecryptClick" prefHeight="30.0" prefWidth="185.0" text="&lt;- Deszyfruj" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         <RadioButton mnemonicParsing="false" text="Z pliku" GridPane.columnIndex="1" GridPane.rowIndex="2">
-            <toggleGroup>
-               <ToggleGroup fx:id="oknoplik" />
-            </toggleGroup>
-         </RadioButton>
-         <RadioButton mnemonicParsing="false" text="Z okna" toggleGroup="$oknoplik" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-         <TextField fx:id="inputTextField" prefHeight="26.0" prefWidth="109.0" promptText="Tekst jawny" />
-         <TextField fx:id="encryptedTextField" promptText="Szyfrogram" GridPane.columnIndex="2" />
+         <TextArea fx:id="inputTextField" prefHeight="326.0" prefWidth="300.0" promptText="Tekst jawny" />
+         <VBox prefHeight="252.0" prefWidth="160.0">
+            <children>
+               <Button mnemonicParsing="false" onAction="#onDecryptClick" prefHeight="30.0" prefWidth="223.0" text="&lt;- Deszyfruj" translateY="100.0" />
+               <Button mnemonicParsing="false" onAction="#onEncryptClick" prefHeight="30.0" prefWidth="179.0" text="Szyfruj -&gt;" translateY="100.0" />
+               <RadioButton mnemonicParsing="false" prefHeight="30.0" prefWidth="165.0" text="Z okna" translateY="100.0">
+                  <toggleGroup>
+                     <ToggleGroup fx:id="oknoplik" />
+                  </toggleGroup>
+               </RadioButton>
+               <RadioButton mnemonicParsing="false" prefHeight="30.0" prefWidth="164.0" text="Z pliku" toggleGroup="$oknoplik" translateY="100.0" />
+            </children>
+         </VBox>
+         <TextArea fx:id="encryptedTextField" prefHeight="333.0" prefWidth="300.0" promptText="Szyfrogram" />
       </children>
-   </GridPane>
-   <Label text="Wpisz klucz Heksadecymalnie" />
+   </HBox>
+   <Separator prefWidth="200.0" />
 </VBox>
